Fixed vertical alignment (#21)

--- a/src/index.css
+++ b/src/index.css
@@ -37,15 +37,6 @@ body {
   max-height:800px;
 }
 
-.mainButton {
-  /* margin: 5px;
-  width: 160px;
-  height: 32px;
-  padding: 5px;
-  background-color: #faeebe; */
-
-}
-
 .selectButton {
   background: #faeebe;
   width: 80px;
